src/test/ui/nll/user-annotations/method-ufcs-inherent-3.stderr
warning: lifetime parameter `'b` never used
  --> $DIR/method-ufcs-inherent-3.rs:9:12
   |
LL |     fn new<'b, T>(x: &'a u32, y: T) -> Self {
   |            ^^--
   |            |
   |            help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0597]: `v` does not live long enough
  --> $DIR/method-ufcs-inherent-3.rs:16:26
   |
LL | fn foo<'a>() {
   |        -- lifetime `'a` defined here
LL |     let v = 22;
LL |     let x = <A<'a>>::new(&v, 22);
   |             -------------^^-----
   |             |            |
   |             |            borrowed value does not live long enough
   |             argument requires that `v` is borrowed for `'a`
LL |
LL | }
   | - `v` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
